--- a/FakeCertification/app/src/main/AndroidManifest.xml
+++ b/FakeCertification/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.ekeon.fakecertification"
           xmlns:android="http://schemas.android.com/apk/res/android">
+  <uses-feature android:name="com.android.hardware.camera"/>
+  <uses-permission android:name="android.permission.CAMERA"/>
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
       android:allowBackup="true"
@@ -11,10 +16,18 @@
     <activity android:name=".MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
-
         <category android:name="android.intent.category.LAUNCHER"/>
       </intent-filter>
     </activity>
+
+    <activity android:name=".RecyclerActivity">
+      <intent-filter>
+        <action android:name="com.ekeon.fakecertification.RecyclerActivity">
+          <category android:name="android.intent.category.DEFAULT"/>
+        </action>
+      </intent-filter>
+    </activity>
+
   </application>
 
 </manifest>
